verschiedene korrekturen und desinstalationen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 /* src/app/globals.css */
 @config "../../tailwind.config.ts";
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 :root {
   --step--1: clamp(.82rem, calc(.80rem + .2vw), .9rem);
